--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.2.0",
     "framer-motion": "^12.0.1",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^11.2.1",
     "web-vitals": "^2.1.4"
   },
