--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.7",
     "firebase": "^11.2.0",
     "framer-motion": "^12.0.1",
+    "node-fetch": "^3.3.2",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
